<resources>
    <string name="app_name">WalkOfInterest</string>



    <string name="username">Никнейм</string>
    <string name="password">Пароль</string>
    <string name="confirmPassword">Подтвердите пароль</string>
    <string name="email">Почта</string>
    <string name="firstName">Имя</string>
    <string name="secondName">Фамилия</string>

    <string name="Register">Регистрация</string>
    <string name="SignIn">Авторизация</string>

    <string name="auth_text_register">Зарегистрировать</string>
    <string name="auth_text_login">Войти</string>

    <string name="auth_combined">Уже есть аккаунт? &lt;font color="#4B8F8C"&gt;Войти&lt;/font&gt;</string>
    <string name="register_combined">Нет аккаунта? &lt;font color="#4B8F8C"&gt;Зарегистрировать&lt;/font&gt;</string>
    <string name="error">Ошибка</string>
    <string name="success">Успешно</string>

    <string name="none">none</string>
    <string name="profile_description">Описание профиля</string>
    <string name="profile_edit">Редактировать</string>
    <string name="logout">Выйти</string>
    <string name="logout_all">Выйти со всех устройств</string>


    <string name="profile_no_reviews">У вас пока нет отзывов</string>
    <string name="profile_count_comments">Комментариев: %1$d</string>
    <string name="profile_review_today">сегодня</string>
    <string name="profile_review_yesterday">вчера</string>
    <string name="profile_review_days_ago">%1$d дн. назад</string>

    <string name="edit_nickname_apply">Изменить</string>
    <string name="edit_nickname_title">Никнейм</string>

    <string name="profile_error_load">Не удалось загрузить профиль</string>

    <string name="count_rate">(%1$d)</string>

    <string name="Save">Сохранить</string>
    <string name="review_hint">Напишите ваш отзыв…</string>
    <string name="review_char_count">%1$d / %2$d</string>
    <string name="All_spots">Всего мест:</string>

    <string name="Subcategories">Подкатегории</string>
    <string name="search_subcategories">Поиск подкатегории</string>
    <string name="not_found">Ничего не найдено</string>
    <string name="Done">Готово</string>
    <string name="show_on_the_map">Показать на карте</string>

    <string name="calculate">Рассчитать</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
</resources>