<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general"
    android:paddingStart="@dimen/padding_general"
    android:paddingEnd="@dimen/padding_general"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_field"
        android:layout_marginTop="@dimen/padding_general"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/fieldBtnClose"
            android:layout_width="@dimen/btn_field"
            android:layout_height="@dimen/btn_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="button back"
                android:src="@drawable/ic_arrow_l" />
        </FrameLayout>

        <TextView
            android:id="@+id/profileUsername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.App.H1"
            android:textColor="@color/white_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fieldBtnOk"
            app:layout_constraintStart_toEndOf="@+id/fieldBtnClose"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/fieldBtnOk"
            android:layout_width="@dimen/btn_field"
            android:layout_height="@dimen/btn_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="button back"
                android:src="@drawable/ic_done" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePhoto"
        android:layout_width="@dimen/photo_profile"
        android:layout_height="@dimen/photo_profile"
        android:layout_marginTop="@dimen/padding_general"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:background="@color/general"
        android:src="@drawable/ic_profile"

        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:shapeAppearanceOverlay="@style/RoundedCornerStyle" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        android:background="@drawable/field_general_shape_plus"
        android:orientation="vertical"
        android:padding="@dimen/padding_middle"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_small"
            android:layout_gravity="center"
            android:gravity="start|center_vertical"
            android:hint="@string/firstName"
            android:textAppearance="@style/TextAppearance.App.Body"
            android:textColor="@color/white"
            android:textColorHint="@color/object_not_active" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@drawable/handle_shape"
            android:backgroundTint="@color/object_not_active"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileBio" />

        <TextView
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_small"
            android:layout_gravity="center"
            android:gravity="start|center_vertical"
            android:hint="@string/secondName"
            android:textAppearance="@style/TextAppearance.App.Body"
            android:textColor="@color/white"
            android:textColorHint="@color/object_not_active" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        android:background="@drawable/field_general_shape_plus"
        android:orientation="vertical"
        android:padding="@dimen/padding_middle"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
        <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_small"
            android:layout_gravity="center"
            android:gravity="start|center_vertical"
            android:hint="@string/profile_description"
            android:textAppearance="@style/TextAppearance.App.Body"
            android:textColor="@color/white"
            android:textColorHint="@color/object_not_active" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>