<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/field_item_trip_state"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgTrip"
        android:layout_width="@dimen/image_category"
        android:layout_height="@dimen/image_category"
        android:scaleType="centerCrop"
        android:src="@color/white_empty"
        android:contentDescription="photo trip"
        app:shapeAppearanceOverlay="@style/RoundedCornerStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTrip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_small"
        android:ellipsize="end"
        android:maxLines="1"
        tools:text="Маршрут"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.App.H2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgTrip"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/handle_shape"
        app:layout_constraintBottom_toBottomOf="@id/textTo"
        app:layout_constraintStart_toEndOf="@id/imgTrip"
        app:layout_constraintTop_toBottomOf="@id/titleTrip" />

    <TextView
        android:id="@+id/textFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_s_small"
        android:layout_marginEnd="@dimen/padding_small"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/from"
        android:textAppearance="@style/TextAppearance.App.Body"
        android:textColor="@color/white_gray"
        app:drawableStartCompat="@drawable/ic_a"
        app:drawableTint="@color/white_gray"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_s_small"
        android:layout_marginEnd="@dimen/padding_small"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/to"
        android:textAppearance="@style/TextAppearance.App.Body"
        android:textColor="@color/white_gray"
        app:drawableStartCompat="@drawable/ic_b"
        app:drawableTint="@color/white_gray"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/textFrom"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/countSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        android:gravity="start|center_vertical"
        android:text="@string/none"
        android:textAppearance="@style/TextAppearance.App.Body2"
        android:textColor="@color/white_gray"
        app:drawableStartCompat="@drawable/ic_point"
        app:drawableTint="@color/object_not_active"
        app:layout_constraintBottom_toBottomOf="@id/imgTrip"
        app:layout_constraintStart_toStartOf="@id/titleTrip"
        app:layout_constraintTop_toBottomOf="@id/textTo" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_s_small"
        android:gravity="start|center_vertical"
        android:text="@string/none"
        android:textAppearance="@style/TextAppearance.App.Body2"
        android:textColor="@color/white_gray"
        app:drawableStartCompat="@drawable/ic_clock"
        app:drawableTint="@color/object_not_active"
        app:layout_constraintBottom_toBottomOf="@id/countSelected"
        app:layout_constraintStart_toEndOf="@id/countSelected"
        app:layout_constraintTop_toTopOf="@id/countSelected" />

    <TextView
        android:id="@+id/bestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_s_small"
        android:gravity="start|center_vertical"
        android:text="@string/none"
        android:textAppearance="@style/TextAppearance.App.Body2"
        android:textColor="@color/white_gray"
        app:drawableStartCompat="@drawable/ic_walk"
        app:drawableTint="@color/object_not_active"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintStart_toEndOf="@id/time"
        app:layout_constraintTop_toTopOf="@id/time" />

</androidx.constraintlayout.widget.ConstraintLayout>